--- a/main.css
+++ b/main.css
@@ -52,315 +52,8 @@ a:hover {
 	padding-bottom: 50px;
 }
 
-#container #logo {
-	background: url(../img/logo.gif) no-repeat top left;
-	height: 44px;
-	
-	padding-bottom: 5px;
-	border-bottom: 1px solid #797979;
-	margin-bottom: 20px;
-}
-
-#container #logo h1 {
-	text-indent: -9999px;
-}
-
-#footer {
-	margin-top: 20px;
-}
-
-.nav {
-	float: right;
-	margin-top: -15px;
-}
 
 
-
-h2 {
-	font-size: 2.2em;
-	margin: 0;
-	border-bottom: 1px solid #797979;
-	margin-bottom: 5px;
-	color: #354158;
-}
-
-h3 {
-	font-size: 1.8em;
-	margin-top: 30px;
-	border-bottom: 1px solid #797979;
-	margin-bottom: 10px;
-	color: #607293;
-}
-
-h4 {
-	font-weight: bold;
-}
-
-.desc {
-	margin: -15px 0 40px 0;
-}
-
-.desc p {
-	margin-bottom: 10px;
-}
-
-.home .menuItem h3 {
-	font-size: 1.8em;
-	line-height: 1.0em;
-	float: none;
-	position: relative;
-	display: block;
-	border-bottom: none;
-	margin: 0;
-}
-
-.home .menuItem p {
-	margin-left: 0px;
-	margin-bottom: 0px;
-	position: relative;
-	display: block;
-	border-bottom: none;
-}
-
-.home .menuItem {
-	display: block;
-	position: relative;
-	padding-bottom: 5px;
-	padding-top: 5px;
-	color: #797979;
-	outline: none;
-	cursor: pointer;
-	height: 40px;
-	border-bottom: 1px solid #797979;
-}
-
-.home  .menuItem:hover {
-	background-color: #f1f1f1;
-}
-
-.home h2 {
-	color: #354158;
-	margin-bottom: 0px;
-}
-
-.arrow {
-	font-size: 4em;
-	position: absolute;
-	right: 0px;
-	top: -16px;
-	color: #b9b9b9;
-}
-
-.home  .menuItem:hover .arrow {
-	right: -4px;
-}
-
-
-.home h2 {
-	background: url(../img/mootools-plugins.gif) no-repeat top left;
-	width: 500px;
-	height: 40px;
-	text-indent: -9999px;
-}
-
-.home .imagemenu {
-	background: url(../img/nav-imagemenu.gif) no-repeat top left;
-	width: 500px;
-	height: 22px;
-	text-indent: -9999px;
-}
-
-.home .validate {
-	background: url(../img/nav-validate.gif) no-repeat top left;
-	width: 500px;
-	height: 22px;
-	text-indent: -9999px;
-}
-
-.home .lightbox {
-	background: url(../img/nav-lightbox.gif) no-repeat top left;
-	width: 500px;
-	height: 22px;
-	text-indent: -9999px;
-}
-
-.home .multibox {
-	background: url(../img/nav-multibox.gif) no-repeat top left;
-	width: 500px;
-	height: 22px;
-	text-indent: -9999px;
-}
-
-.home .slideshow {
-	background: url(../img/nav-slideshow.gif) no-repeat top left;
-	width: 500px;
-	height: 22px;
-	text-indent: -9999px;
-}
-
-.home .sortabletable {
-	background: url(../img/nav-sortabletable.gif) no-repeat top left;
-	width: 500px;
-	height: 22px;
-	text-indent: -9999px;
-}
-
-.home .slider {
-	background: url(../img/nav-slider.gif) no-repeat top left;
-	width: 500px;
-	height: 22px;
-	text-indent: -9999px;
-}
-
-.home .roundedcorners {
-	background: url(../img/nav-roundedcorners.gif) no-repeat top left;
-	width: 500px;
-	height: 22px;
-	text-indent: -9999px;
-}
-
-.home .pageloader {
-	background: url(../img/nav-pageloader.gif) no-repeat top left;
-	width: 500px;
-	height: 22px;
-	text-indent: -9999px;
-}
-
-
-
-
-h2.imagemenu {
-	background: url(../img/title-imagemenu.gif) no-repeat top left;
-	height: 30px;
-	text-indent: -9999px;
-}
-
-h2.validate {
-	background: url(../img/title-validate.gif) no-repeat top left;
-	height: 30px;
-	text-indent: -9999px;
-}
-
-h2.lightbox {
-	background: url(../img/title-lightbox.gif) no-repeat top left;
-	height: 30px;
-	text-indent: -9999px;
-}
-
-h2.multibox {
-	background: url(../img/title-multibox.gif) no-repeat top left;
-	height: 30px;
-	text-indent: -9999px;
-}
-
-h2.slideshow {
-	background: url(../img/title-slideshow.gif) no-repeat top left;
-	height: 30px;
-	text-indent: -9999px;
-}
-
-h2.sortabletable {
-	background: url(../img/title-sortabletable.gif) no-repeat top left;
-	height: 30px;
-	text-indent: -9999px;
-}
-
-h2.slider {
-	background: url(../img/title-slider.gif) no-repeat top left;
-	height: 30px;
-	text-indent: -9999px;
-}
-
-h2.roundedcorners {
-	background: url(../img/title-roundedcorners.gif) no-repeat top left;
-	height: 30px;
-	text-indent: -9999px;
-}
-
-h2.pageloader {
-	background: url(../img/title-pageloader.gif) no-repeat top left;
-	height: 30px;
-	text-indent: -9999px;
-}
-
-
-
-
-h3.example {
-	background: url(../img/heading-example.gif) no-repeat top left;
-	height: 30px;
-	text-indent: -9999px;
-}
-
-h3.features {
-	background: url(../img/heading-features.gif) no-repeat top left;
-	height: 30px;
-	text-indent: -9999px;
-}
-
-h3.usage {
-	background: url(../img/heading-usage.gif) no-repeat top left;
-	height: 30px;
-	text-indent: -9999px;
-}
-
-h3.options {
-	background: url(../img/heading-options.gif) no-repeat top left;
-	height: 30px;
-	text-indent: -9999px;
-}
-
-h3.compatibility {
-	background: url(../img/heading-browser.gif) no-repeat top left;
-	height: 30px;
-	text-indent: -9999px;
-}
-
-h3.requirements {
-	background: url(../img/heading-requirements.gif) no-repeat top left;
-	height: 30px;
-	text-indent: -9999px;
-}
-
-h3.downloads {
-	background: url(../img/heading-downloads.gif) no-repeat top left;
-	height: 30px;
-	text-indent: -9999px;
-}
-
-
-
-
-
-.version {
-	font-family: Courier;
-	font-size: 1em;
-}
-
-ul {
-	margin-left: 15px;
-}
-
-dt {
-	float: left;
-}
-
-dd {
-	margin-left: 150px;
-	margin-bottom: 10px;
-}
-
-.description {
-	margin-top: 10px;
-}
-
-code {
-	font-family: Courier;
-}
-
-#usage p {
-	margin: 10px 0px 5px 0px;
-}
 
 /*
 Baruu 1
@@ -410,19 +103,19 @@ Baruu 1
 }
 
 #imageMenu ul li.landscapes a {
-	background: url(images/landscapes.jpg) repeat scroll 0%;
+	background: url(https://fbcdn-sphotos-a-a.akamaihd.net/hphotos-ak-xaf1/v/t1.0-9/10628533_10202961374982513_1257416518643089856_n.jpg?oh=12709febaa906043b8e627265e1f4e81&oe=54C6B608&__gda__=1421313468_70de027d6974a077c3513b51c7d7edae) repeat scroll 0%;
 }
 
 #imageMenu ul li.people a {
-	background: url(images/people.jpg) repeat scroll 0%;
+	background: url(https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-xpa1/v/t1.0-9/10414571_10202961375022514_6979611392320728946_n.jpg?oh=e20f429cd5c3b2e38cfc0a5751e561ec&oe=54AFE336&__gda__=1421822496_4aa6b40c9a5e19d1a20773d78131b31a) repeat scroll 0%;
 }
 
 #imageMenu ul li.nature a {
-	background: url(images/nature.jpg) repeat scroll 0%;
+	background: url(https://fbcdn-sphotos-e-a.akamaihd.net/hphotos-ak-xfa1/v/t1.0-9/10592704_10202961375062515_7997201248399034737_n.jpg?oh=17869ff10edb7c16f7635b186d44417a&oe=54BB89D2&__gda__=1421061439_e9ad9d68dcdaf1a258744f2404ae78d3) repeat scroll 0%;
 }
 
 #imageMenu ul li.urban a {
-	background: url(images/urban.jpg) repeat scroll 0%;
+	background: url(https://scontent-a.xx.fbcdn.net/hphotos-xaf1/v/t1.0-9/10177517_10202961375422524_6716989904739191114_n.jpg?oh=a65ab7735fc27e18356ef570d451ffcd&oe=54C817BB) repeat scroll 0%;
 }
 
 #imageMenu ul li.abstract a {
